# library-manager

./: .gitignore  README.md  SETUP.md  docker-compose.yml  package.json  vercel.json
backend/: README.md  database.py  main.py  models.py  pyproject.toml  requirements.txt  run.bat  run.sh  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 195d34c4ebd4_.py  5c3b419954c7_.py  73a42881c13b_.py  a7ee84a40c1e_add_book_edition.py  b77e0a842d00_.py  f4576ab5ed95_.py
backend/app/: main.py  models.py  schemas.py
backend/app/core/: config.py  constants.py
backend/app/db/: database.py
backend/app/routers/: analytics.py  books.py  loans.py  members.py  reservations.py
backend/routers/: analytics.py  books.py  loans.py  members.py  reservations.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/api/: client.ts  services.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/layout/: DashboardLayout.jsx
frontend/src/pages/: AnalyticsPage.tsx  BooksPage.jsx  BooksPage.tsx  DashboardPage.jsx  LoansPage.jsx  LoansPage.tsx  MembersPage.jsx  MembersPage.tsx
frontend/src/services/: api.js
